force-app/main/default/objects/Employee_Leave_Balance__c/Employee_Leave_Balance__c.object-meta.xml
<CustomObject>
    <label>Employee Leave Balance</label>
    <nameField>
        <label>Employee Leave Balance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Leave Balance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>