force-app/main/default/objects/Employee_Leave_Balance__c/fields/Leave__c.field-meta.xml
<CustomField>
    <fullName>Leave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave</label>
    <referenceTo>Leave__c</referenceTo>
    <relationshipLabel>Employee Leave Balance</relationshipLabel>
    <relationshipName>Employee_Leave_Balance</relationshipName>
    <type>Lookup</type>
</CustomField>