force-app/main/default/objects/Employee_Leave_Balance__c/fields/Leave_Accured_So_Far__c.field-meta.xml
<CustomField>
    <fullName>Leave_Accured_So_Far__c</fullName>
    <label>Leave Accured So Far</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>