force-app/main/default/objects/Employee_Leave_Balance__c/fields/Leave_Annual_Quota__c.field-meta.xml
<CustomField>
    <fullName>Leave_Annual_Quota__c</fullName>
    <label>Leave Annual Quota</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>