force-app/main/default/objects/Employee_Leave_Balance__c/fields/Leave_Available__c.field-meta.xml
<CustomField>
    <fullName>Leave_Available__c</fullName>
    <label>Leave Available</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>