force-app/main/default/objects/Employee_Leave_Balance__c/fields/Leave_Carryover__c.field-meta.xml
<CustomField>
    <fullName>Leave_Carryover__c</fullName>
    <label>Leave Carryover</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>